Istio/实战/vitural-service/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-svc-vs
spec:
  hosts:
    - web-svc
  http:
    - route:
        - destination:
            host: tomcat-svc
          weight: 20
        - destination:
            host: httpd-svc
          weight: 80
